<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintlayout"
    tools:context=".EntryDetailsActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_leyaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/dateplaceholder"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMood_details"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/moodplaceholder"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_details" />

            <ImageView
                android:id="@+id/imgmood_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tvMood_details"
                app:layout_constraintTop_toTopOf="@+id/tvMood_details"
                app:srcCompat="@drawable/ic_awesomeradio" />

            <TextView
                android:id="@+id/tvGoals_details"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/goalsplaceholder"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tvMood_details"
                app:layout_constraintTop_toBottomOf="@+id/imgmood_details" />

            <TextView
                android:id="@+id/tvGoals_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/no_goals_for_this_day"
                android:textColor="#009688"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGoals_details" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/positive_things"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tvGoals_details"
                app:layout_constraintTop_toBottomOf="@+id/tvGoals_list" />

            <TextView
                android:id="@+id/tvPositiveThings_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/luckiest_guy"
                android:text=""
                android:textColor="#009688"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/negative_things"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/tvPositiveThings_details" />

            <TextView
                android:id="@+id/tvNegativeThings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/luckiest_guy"
                android:text=""
                android:textColor="#009688"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/thoughts"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/tvNegativeThings" />

            <TextView
                android:id="@+id/tvThoughts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/luckiest_guy"
                android:text=""
                android:textColor="#009688"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/entryimage"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/tvThoughts" />

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="128dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/cancel_button"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/done_button"
        app:layout_constraintTop_toTopOf="@+id/done_button"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24"
        android:contentDescription="TODO" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/fabOptions"
        app:layout_constraintEnd_toEndOf="@+id/fabOptions"
        app:layout_constraintStart_toStartOf="@+id/fabOptions"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        android:visibility="invisible"
        android:contentDescription="TODO" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toTopOf="@+id/fabEdit"
        app:layout_constraintEnd_toEndOf="@+id/fabEdit"
        app:layout_constraintStart_toStartOf="@+id/fabEdit"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        android:visibility="invisible"
        android:contentDescription="TODO" />
</androidx.constraintlayout.widget.ConstraintLayout>